# openenv-ai-pipeline

./: .gitignore  Dockerfile  README.md  inference.py  inference_results.json  pyproject.toml
files/: .env.example  Dockerfile  Makefile  README.md  demo.py  docker-compose.yml  environment.py  inference.py  main.py  models.py  openenv.yaml  registry.py  requirements.txt  test_env.py
server/: app.py
